--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 }
 .reveal-photo.show{ filter: blur(0); }
 
-/* FIXED: Showing your full face properly */
+/* FIXED: Showing your full face properly with cover effect */
 .my-photo {
     width: 280px; 
-    height: auto;
-    max-height: 400px;
-    object-fit: contain; /* This ensures the whole photo fits without cropping */
+    height: 350px; /* Fixed height for consistent look */
+    object-fit: cover; /* Fills the area completely */
+    object-position: top; /* Keeps the focus on the face */
     border-radius: 20px; 
     border: 5px solid #ff4d6d;
     margin-top: 20px;
@@ -90,18 +90,39 @@ button{
     z-index: 100;
 }
 
+/* MODIFIED: Special Popup to match your screenshot */
 #special-popup {
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: white;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0 0 50px rgba(0,0,0,0.5);
+    background: #f0f0f0; /* Light grey background like screenshot */
+    padding: 15px;
+    border-radius: 30px;
+    box-shadow: 0 15px 40px rgba(0,0,0,0.3);
     z-index: 2000;
     color: #333;
-    width: 280px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#special-popup.hidden { display: none; }
+
+#popup-pic {
+    width: 100%;
+    height: 380px; 
+    border-radius: 20px; 
+    object-fit: cover; /* FIXED: Now covers the whole frame */
+    object-position: top; /* Focus on face */
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+}
+
+#popup-text {
+    color: #ff4d6d;
+    margin: 15px 0;
+    font-size: 1.4em;
 }
 </style>
 </head>
@@ -115,9 +136,9 @@ button{
 </audio>
 
 <div id="special-popup" class="hidden">
-    <img id="popup-pic" src="" style="width:220px; border-radius:15px; height: 280px; object-fit: contain; background: #eee;">
-    <h3 id="popup-text" style="color:#ff4d6d"></h3>
-    <button class="yes" onclick="closePopup()">अघि बढौ 😄</button>
+    <img id="popup-pic" src="">
+    <h3 id="popup-text"></h3>
+    <button class="yes" onclick="closePopup()">ल अर्को अब 😄</button>
 </div>
 
 <div id="game1">
@@ -162,7 +183,6 @@ button{
 </div>
 
 <script>
-// ... (Logic stays the same, I just kept it here so you can copy-paste the whole file) ...
 const game1=document.getElementById("game1");
 const game2=document.getElementById("game2");
 const catchHeart=document.getElementById("catch");
@@ -249,7 +269,7 @@ const quizQuestions = [
             { text: "अ थोरै गर्छु ", isCorrect: true }
         ]
     },
-        {
+    {
         question: "नाटक होकी साँची हो?",
         options: [
             { text: "नाटक हो ", isCorrect: false },
@@ -281,72 +301,4 @@ function loadQuestion() {
     quizOptions.innerHTML = '';
     
     q.options.forEach(option => {
-        const button = document.createElement('button');
-        button.textContent = option.text;
-        
-        if (option.isCorrect) {
-            button.className = "yes";
-            button.onclick = () => {
-                if(option.isSpecial) {
-                    popupPic.src = option.pic;
-                    popupText.innerText = option.msg;
-                    specialPopup.classList.remove("hidden");
-                } else {
-                    rightAnswer();
-                }
-            };
-        } else {
-            button.onmouseover = () => {
-                button.classList.add("fly");
-                button.style.left = Math.random() * 70 + "vw";
-                button.style.top = Math.random() * 60 + "vh";
-            };
-            button.onclick = () => alert("समातेर देखाउ पहिले! 😂");
-        }
-        quizOptions.appendChild(button);
-    });
-}
-
-function closePopup() {
-    specialPopup.classList.add("hidden");
-    rightAnswer();
-}
-
-function rightAnswer(){
-    currentQuestionIndex++;
-    if (currentQuestionIndex < quizQuestions.length) {
-        loadQuestion();
-    } else {
-        quiz.classList.add("hidden");
-        final.classList.remove("hidden");
-        revealPhotos();
-    }
-}
-
-noBtn.onmouseover=()=>{
-    noBtn.style.left=Math.random()*70+"vw";
-    noBtn.style.top=Math.random()*60+"vh";
-};
-
-function accepted(){
-    final.classList.add("hidden");
-    end.classList.remove("hidden");
-}
-
-function revealPhotos(){
-    const photos=document.querySelectorAll(".reveal-photo");
-    photos.forEach((img,index)=>{
-        setTimeout(()=>{
-            img.classList.add("show");
-        }, index * 800);
-    });
-}
-</script>
-
-</body>
-</html>
-
-
-
-
-
+        const button
